--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "author": "BinPar Team S.L <soporte@binpar.com>",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "child_process": "^1.0.2",
-    "express": "^4.14.0",
-    "html5-to-pdf": "^2.1.1",
-    "mongodb": "^2.2.16",
-    "nightmare": "^2.8.1"
+    "body-parser": "1.15.2",
+    "child_process": "1.0.2",
+    "express": "4.14.0",
+    "html5-to-pdf": "2.1.1",
+    "mongodb": "2.2.16",
+    "nightmare": "2.8.1"
   }
 }
