Complete rework of entire API with Puppeteer

--- a/package.json
+++ b/package.json
@@ -1,22 +1,75 @@
 {
   "name": "@binpar/virtual-browser-tools",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Virtual browser tools",
-  "main": "app.js",
+  "main": "src/index.js",
+  "author": "BinPar Team S.L.<soporte@binpar.com>",
   "scripts": {
-    "start": "npm install;LOG=verbose PORT=3003 node app.js",
-    "kill": "kill -9 $(ps aux | grep 'node app.js' | awk '{print $2}')",
-    "testJPG": "cd test;curl -o output.jpg -X POST -H 'Content-Type: application/json' -d '{\"url\":\"http://www.medicapanamericana.com\",\"options\":{\"waitTimeout\":1000,\"screenshotOptions\":{\"width\":1000,\"height\":800}}}' http://localhost:3003/imageFromUrl;open output.jpg",
-    "testPDF": "cd test;curl -o output.pdf -X POST -H 'Content-Type: application/json' -d '{\"url\":\"http://www.binpar.com\",\"options\":{\"selector\":\".gm-style\", \"pdfOptions\": {\"marginsType\": 0,\"printBackground\": true,\"pageSize\":\"A3\",\"printSelectionOnly\": false,\"landscape\": true}}}' http://localhost:3003/PDFFromUrl;open output.pdf"
+    "dev": "LOG=1 NODE_ENV=dev babel-node src/index.js",
+    "start": "NODE_ENV=production node .compiled/src/index.js",
+    "build": "rm -rf .compiled && babel src --out-dir .compiled/src --copy-files",
+    "deploy": "cd .deploy; mupx deploy; cd ..",
+    "test": "jest",
+    "testDev": "jest --watch",
+    "testDevWithSSHTunnel": "WITH_SSH_TUNNEL=1 NODE_ICU_DATA=node_modules/full-icu jest --watch",
+    "testCoverage": "jest --coverage",
+    "testCoverageDev": "jest --coverage --watch --no-cache",
+    "openTestCoverageReport": "jest --coverage --no-cache; open ./.coverage/lcov-report/index.html",
+    "openTestCoverageReportSSH": "WITH_SSH_TUNNEL=1 jest --coverage --no-cache; open ./.coverage/lcov-report/index.html",
+    "openTestCoverageReportDev": "jest --coverage --watch --no-cache",
+    "showJestConfig": "jest --showConfig",
+    "clearJestCache": "jest --clearCache"
   },
-  "author": "BinPar Team S.L <soporte@binpar.com>",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "1.15.2",
-    "child_process": "1.0.2",
-    "express": "4.14.0",
-    "html5-to-pdf": "2.1.1",
-    "mongodb": "2.2.16",
-    "nightmare": "2.8.1"
+    "apollo-boost": "^0.1.7",
+    "apollo-client": "^2.3.2",
+    "apollo-link-context": "^1.0.8",
+    "apollo-link-http": "^1.5.4",
+    "apollo-server-express": "^2.0.0-beta.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-inline-import": "^2.0.6",
+    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-register": "^6.26.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.2",
+    "busboy": "^0.2.14",
+    "cors": "^2.8.4",
+    "cross-env": "^5.0.5",
+    "cryptr": "^4.0.0",
+    "express": "^4.15.3",
+    "faker": "^4.1.0",
+    "fibers": "^2.0.0",
+    "fs-readfile-promise": "^3.0.1",
+    "full-icu": "^1.2.0",
+    "graphql": "^0.13.2",
+    "graphql-date": "^1.0.3",
+    "graphql-fields": "^1.0.2",
+    "graphql-tag": "^2.9.2",
+    "graphql-tools": "^3.0.1",
+    "isomorphic-unfetch": "^2.0.0",
+    "jest": "^23.1.0",
+    "jest-html-reporter": "^2.3.0",
+    "jsonwebtoken": "^8.3.0",
+    "mailgun-js": "^0.18.0",
+    "mongodb": "^3.0.2",
+    "nodemon": "^1.17.5",
+    "puppeteer": "^1.5.0",
+    "react": "^16.4.0",
+    "react-apollo": "^2.1.4",
+    "react-dom": "^16.4.0",
+    "underscore": "^1.8.3",
+    "validator": "^8.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-import-resolver-meteor": "^0.4.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-meteor": "^4.1.6",
+    "eslint-plugin-react": "^7.3.0"
   }
 }
