--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@binpar/virtual-browser-tools",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Virtual browser tools",
   "main": "src/index.js",
   "author": "BinPar Team S.L.<soporte@binpar.com>",
   "scripts": {
     "dev": "LOG=1 NODE_ENV=dev babel-node src/index.js",
-    "start": "NODE_ENV=production node .compiled/src/index.js",
-    "build": "rm -rf .compiled && babel src --out-dir .compiled/src --copy-files",
-    "deploy": "cd .deploy; mupx deploy; cd ..",
+    "start": "NODE_ENV=production PORT=80 node dist/src/index.js",
+    "build": "rm -rf dist && babel src --out-dir dist/src --copy-files",
     "test": "jest",
     "testDev": "jest --watch",
     "testDevWithSSHTunnel": "WITH_SSH_TUNNEL=1 NODE_ICU_DATA=node_modules/full-icu jest --watch",
@@ -41,9 +40,8 @@
     "cryptr": "^4.0.0",
     "express": "^4.15.3",
     "faker": "^4.1.0",
-    "fibers": "^2.0.0",
     "fs-readfile-promise": "^3.0.1",
-    "full-icu": "^1.2.0",
+    "full-icu": "^1.4.0",
     "graphql": "^0.13.2",
     "graphql-date": "^1.0.3",
     "graphql-fields": "^1.0.2",
