--- a/k8s/compiled/release.yml
+++ b/k8s/compiled/release.yml
@@ -53,7 +53,7 @@ spec:
         app.kubernetes.io/environment: release
     spec:
       containers:
-      - image: 402083338966.dkr.ecr.eu-west-1.amazonaws.com/virtual-browser-tools:release
+      - image: 402083338966.dkr.ecr.eu-west-1.amazonaws.com/virtual-browser-tools:release-arm
         imagePullPolicy: Always
         name: app
         envFrom:
